backend/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfc-admin-backend-svc
  namespace: nfc-admin-backend
  labels:
    app: nfc-admin-backend
spec:
  type: ClusterIP
  selector:
    app: nfc-admin-backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
